# Simple-Raytracer-using-C-

./: CMakeLists.txt  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  presets.h  quad.h  ray.h  rpp_stb_image.h  rtpproject.h  sphere.h  texture.h  triangle.h  vec3.h
